Modernize BGPClusterSingletonService
Couple of things
- use local variable type inference
- remove unneeded locals
- use DataObjectModification type dispatch

Change-Id: Ifabe22cc58a92eeb06b85851e8cac120dd0b6b58
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>